test: Test a59ba63a8a3d1be546ee97230bdb3985f5afcc3c
Related to: jidicula/clang-format-action#36

--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run clang-format style check for C/C++ programs.
-      uses: micahsnyder/clang-format-action@exclude-regex
+      uses: jidicula/clang-format-action@main
       with:
         check-path: ${{ matrix.path['check'] }}
         clang-format-version: 11
